--- a/.conkyrc
+++ b/.conkyrc
@@ -57,10 +57,10 @@ conky.config = {
     -- =========================
     -- Color Palette
     -- =========================
-    color1 = '#FE8458', -- base accent (orange)
-    color2 = '#FF9B72', -- lighter accent
-    color3 = '#FFD2C2', -- lightest accent
-    color4 = '#C95C2B', -- deep accent
+    color1 = '#686b6f', -- base accent (grey)
+    color2 = '#8a8d91', -- lighter accent
+    color3 = '#acafb3', -- lightest accent
+    color4 = '#46494d', -- deep accent
     color5 = '#22223b',
     default_color = '#f3f3f3'
 }
